@@ -1205,8 +1205,9 @@
     <branch id="gnome-2-16" stringfrozen="true"/>
   </module>
   <module id="libbonoboui">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="libgda">
     <branch id="HEAD"/>
