@@ -450,7 +450,7 @@
       <module id="gnome-vfs" branch="gnome-2-20"/>
       <module id="gtk+"/>
       <module id="libbonobo"/>
-      <module id="libbonoboui"/>
+      <module id="libbonoboui" branch="gnome-2-20"/>
       <module id="libgnome" branch="gnome-2-20"/>
       <module id="libgnomecanvas" branch="gnome-2-20"/>
       <module id="libgnomeui" branch="gnome-2-20"/>
