@@ -1,3 +1,9 @@
+2007-11-14  Johannes Schmid <jhs@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	libbonoboui branched for gnome-2-20
+
 2007-11-10  Claude Paroz  <claude@2xlibre.net>
 
 	* people.xml.in: Added new Kashmiri translation leader.
